# fakedin

./: .gitignore  LICENSE  README.md  generate_job.py  generate_resume.py  generate_resumes_for_job.py  pyproject.toml  requirements.txt
fakedin/: config.py  data_generator.py  job_data_generator.py  job_generator.py  llm_client.py  resume_for_job_generator.py  resume_generator.py
fakedin/prompts/: job_opening.prompt.md  resume.prompt.md  resume_for_job.prompt.md
src/fakedin/: __init__.py  __main__.py  cli.py  config.py  job_data_generator.py  job_generator.py  llm_client.py  person_generator.py  resume_for_job_generator.py  resume_generator.py
src/fakedin/prompts/: resume.prompt.md  resume_for_job.prompt.md
tests/: conftest.py  test_cli_parser.py  test_config.py  test_job_data_generator.py  test_job_generator.py  test_llm_client.py  test_person_generator.py  test_resume_for_job_generator.py  test_resume_generator.py
