[project]
name = "fakedin"
version = "0.1.0"
description = "Utilities to create fake resumes and job descriptions"
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = [
    "faker>=37.1.0",
    "fpdf2>=2.8.2",
    "jinja2>=3.1.6",
    "markdown>=3.7",
    "openai>=1.68.2",
    "promptdown>=0.9.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Text Processing",
    "Topic :: Office/Business",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false
