[project]
name = "fakedin"
version = "0.1.0"
description = "Utilities to create fake resumes and job descriptions"
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = [
    "faker>=39.0.0",
    "fpdf2>=2.8.5",
    "jinja2>=3.1.6",
    "markdown>=3.10",
    "openai>=2.14.0",
    "promptdown>=1.1.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Text Processing",
    "Topic :: Office/Business",
]

[project.scripts]
fakedin = "fakedin.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pdm.scripts]
lint = "flake8 src tests"
test = "pytest tests"
